# Freyr2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  install_deps.sh
examples/: CMakeLists.txt
examples/Space/: CMakeLists.txt  Components.hpp  Design.hpp  Shaders.cpp  Shaders.hpp  Space.cpp  Tags.hpp  World.hpp
examples/Space/Components/: BulletComponent.hpp  CircleColliderComponent.hpp  DecayComponent.hpp  LaserGunComponent.hpp  MeshComponent.hpp  NameComponent.hpp  PlayerComponent.hpp  RigidBodyComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
examples/Space/Core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp  TextureManager.cpp  TextureManager.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
examples/Space/Events/: GameEvents.hpp  InputEvents.hpp
examples/Space/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  DecaySystem.cpp  DecaySystem.hpp  InputSystem.cpp  InputSystem.hpp  MeteorManagerSystem.cpp  MeteorManagerSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerMoveSystem.cpp  PlayerMoveSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScreenLimiterSystem.cpp  ScreenLimiterSystem.hpp  ShootSystem.cpp  ShootSystem.hpp
examples/Space/Tags/: BulletTag.hpp  EnemyTag.hpp  PlayerTag.hpp
examples/Space/Utils/: quadtree.cpp  quadtree.hpp
examples/dependencies/: CMakeLists.txt
src/: freyr.cpp
src/Freyr/: Freyr.hpp
src/Freyr/Config/: Macro.hpp
src/Freyr/Containers/: SparseSet.hpp
src/Freyr/Core/: BaseSystem.hpp  ComponentManager.hpp  Design.hpp  EntityManager.hpp  Macro.hpp  PublisherSystem.hpp  SystemManager.hpp  World.hpp
src/Freyr/Meta/: Iteration.hpp  MetaList.hpp
src/Freyr/Types/: Entity.hpp
src/FreyrCT/Containers/: SparseSet.hpp
src/FreyrCT/Core/: PublisherSystem.hpp
src/FreyrCT/Meta/: Iteration.hpp
src/FreyrCT/Types/: Entity.hpp
src/freyr/: freyr.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
